# id-llm-abstraction

./: .gitignore  LICENSE  pyproject.toml  readme.md  readme.txt
scripts/: extract_final_representations.py  plot_comparison_ii.py
