[project]
name = "id-llm-abstraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "dadapy>=0.3.4",
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "numpy==1.26.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]
